# aur-auto-update-ci

./: .gitignore  Cargo.toml  action.yml  aur_known_hosts
.github/workflows/: rust.yml  update.yml
src/: crates_io.rs  github.rs  main.rs
